# hc-enterprise-kg

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
docs/: cdaio-evaluation.md  cdaio-roadmap.md  cli.md  entity-model.md  import-guide.md  performance.md  profiles.md  python-api.md  troubleshooting.md
docs/adr/: 001-custom-synthetic-data-pipeline.md  002-pydantic-v2-extra-allow.md  003-networkx-multidigraph.md  004-knowledge-graph-facade.md  005-layered-generation-order.md  006-coordinated-template-dicts.md  007-research-backed-scaling.md  008-relationship-weaving.md  009-mcp-mtime-auto-reload.md  010-compact-entity-serialization.md  011-rapidfuzz-search.md  012-json-primary-export.md
examples/: auto_kg_from_csv.py  quick_start.py
examples/import-mappings/: qualys-vulns.mapping.json  servicenow-cmdb.mapping.json  workday-hr.mapping.json
examples/import-templates/: business_capability.csv  business_capability.json  contract.csv  contract.json  control.csv  control.json  controls.csv  customer.csv  customer.json  data_asset.csv  data_asset.json  data_domain.csv  data_domain.json  data_flow.csv  data_flow.json  department.csv  department.json  departments.csv  geography.csv  geography.json  incident.csv  incident.json  incidents.csv  initiative.csv  initiative.json  integration.csv  integration.json  jurisdiction.csv  jurisdiction.json  location.csv  location.json  market_segment.csv  market_segment.json  network.csv  network.json  organization.json  organizational_unit.csv  organizational_unit.json  people.csv  person.csv  (+29 more)
scripts/: README.md  cmu-cdaio-install.ps1  cmu-cdaio-install.sh  kg-add-member.sh  kg-eod.sh  kg-morning.sh  kg-setup-repo.sh  kg-sync.sh  test-kg-pipeline.py  test-mcp-integration.py
src/: __init__.py
src/analysis/: benchmark.py  metrics.py  queries.py
src/analysis/charts/: __init__.py  data_collector.py  models.py  renderer.py  theme.py
src/auto/: __init__.py  base.py  confidence.py  pipeline.py  schema_inference.py
src/auto/extractors/: base.py  csv_extractor.py  llm_extractor.py  rule_based.py
src/auto/linkers/: base.py  embedding_linker.py  heuristic_linker.py
src/auto/resolvers/: base.py  dedup_resolver.py
src/cli/: __init__.py  auto_cmd.py  benchmark_cmd.py  charts_cmd.py  demo_cmd.py  entity_overrides.py  export_cmd.py  generate.py  import_cmd.py  inspect_cmd.py  install_cmd.py  main.py  mcp_cmd.py  serve_cmd.py  visualize_cmd.py
src/domain/: __init__.py  base.py  registry.py  relationship_schema.py  shared.py  temporal.py  validation.py
src/domain/entities/: __init__.py  business_capability.py  contract.py  control.py  customer.py  data_asset.py  data_domain.py  data_flow.py  department.py  geography.py  incident.py  initiative.py  integration.py  jurisdiction.py  location.py  market_segment.py  network.py  organizational_unit.py  person.py  policy.py  product.py  product_portfolio.py  regulation.py  risk.py  role.py  site.py  stubs.py  system.py  threat.py  threat_actor.py  vendor.py  vulnerability.py
src/engine/: __init__.py  abstract.py  factory.py  networkx_engine.py  query.py
src/export/: __init__.py  base.py  graphml_export.py  json_export.py
src/graph/: __init__.py  events.py  knowledge_graph.py
src/hc_enterprise_kg/analysis/: __init__.py  metrics.py  queries.py
src/hc_enterprise_kg/auto/: __init__.py  base.py  confidence.py  pipeline.py  schema_inference.py
src/hc_enterprise_kg/cli/: auto_cmd.py  export_cmd.py  generate.py  inspect_cmd.py  main.py
src/hc_enterprise_kg/domain/: __init__.py  registry.py
src/hc_enterprise_kg/engine/: __init__.py  abstract.py  factory.py  networkx_engine.py  query.py
src/hc_enterprise_kg/export/: __init__.py  base.py  graphml_export.py  json_export.py
src/hc_enterprise_kg/graph/: __init__.py  events.py  knowledge_graph.py
src/hc_enterprise_kg/ingest/: __init__.py  base.py  csv_ingestor.py  json_ingestor.py  mapping.py
src/hc_enterprise_kg/synthetic/: __init__.py  base.py  orchestrator.py  relationships.py
src/ingest/: __init__.py  base.py  csv_ingestor.py  json_ingestor.py  mapping.py  mapping_loader.py  validator.py
src/mcp_server/: helpers.py  server.py  state.py  tools.py  validation.py
src/rag/: context_builder.py  retriever.py  search.py
src/serve/: __init__.py  app.py
src/synthetic/: __init__.py  base.py  orchestrator.py  quality.py  relationships.py
src/synthetic/generators/: __init__.py  data_assets.py  departments.py  enterprise.py  incidents.py  locations.py  networks.py  people.py  policies.py  roles.py  security.py  systems.py  vendors.py
src/synthetic/profiles/: __init__.py  base_profile.py  financial_org.py  healthcare_org.py  tech_company.py
tests/: conftest.py
tests/fixtures/: sample_entities.json  sample_org.csv  sample_text.txt
tests/integration/: test_auto_pipeline.py  test_charts_pipeline.py  test_graph_integrity.py  test_import_templates.py  test_knowledge_graph.py  test_mcp_integration.py  test_stress.py  test_synthetic_pipeline.py
tests/performance/: conftest.py  test_performance.py
tests/unit/analysis/: test_charts.py
tests/unit/auto/: test_extractors.py  test_linkers.py  test_pipeline.py  test_resolvers.py  test_schema_inference.py
tests/unit/cli/: test_auto_cmd.py  test_benchmark_cmd.py  test_charts_cmd.py  test_demo_cmd.py  test_export_cmd.py  test_generate_cmd.py  test_import_cmd.py  test_inspect_cmd.py  test_mcp_cmd.py  test_serve_cmd.py  test_visualize.py
tests/unit/domain/: test_backward_compat.py  test_base.py  test_capabilities.py  test_compliance.py  test_customers.py  test_data_assets.py  test_entities.py  test_initiatives.py  test_locations.py  test_organization.py  test_people.py  test_products.py  test_property_based.py  test_registry.py  test_relationship_schema.py  test_shared.py  test_technology.py  test_temporal.py  test_vendors.py
(+59 files in other folders)
