[project]
name = "hc-enterprise-kg"
version = "0.31.0"
description = "Enterprise knowledge graph platform for rapid organizational modelling, scenario analysis, and data & AI leadership"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Thomas Jones"}
]
keywords = [
    "knowledge-graph",
    "enterprise",
    "digital-twin",
    "organizational-modelling",
    "scenario-analysis",
    "data-governance",
    "ai-governance",
    "cdaio",
    "graph-analytics",
    "synthetic-data",
    "risk-modeling",
    "networkx",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Security",
    "Typing :: Typed",
]

dependencies = [
    "networkx>=3.2",
    "pydantic>=2.5",
    "faker>=22.0",
    "click>=8.1",
    "pyyaml>=6.0",
    "litellm>=1.0",
    "rapidfuzz>=3.0",
]

[project.urls]
Homepage = "https://github.com/thehipsterciso/hc-enterprise-kg"
Repository = "https://github.com/thehipsterciso/hc-enterprise-kg"
Issues = "https://github.com/thehipsterciso/hc-enterprise-kg/issues"
Changelog = "https://github.com/thehipsterciso/hc-enterprise-kg/blob/main/CHANGELOG.md"

[project.optional-dependencies]
embeddings = ["sentence-transformers>=2.2"]
neo4j = ["neo4j>=5.0"]
viz = ["matplotlib>=3.8", "pyvis>=0.3"]
mcp = ["mcp>=1.25"]
api = ["flask>=3.0"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "hypothesis>=6.0",
    "mypy>=1.8",
    "ruff>=0.2",
    "pre-commit>=3.0",
]

[project.scripts]
hckg = "cli.main:cli"

[project.entry-points."hckg.generators"]
# Allows third-party packages to register generators

[project.entry-points."hckg.engines"]
# Allows third-party packages to register graph backends

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    {include = "domain", from = "src"},
    {include = "engine", from = "src"},
    {include = "graph", from = "src"},
    {include = "synthetic", from = "src"},
    {include = "auto", from = "src"},
    {include = "ingest", from = "src"},
    {include = "export", from = "src"},
    {include = "analysis", from = "src"},
    {include = "cli", from = "src"},
    {include = "mcp_server", from = "src"},
    {include = "rag", from = "src"},
    {include = "serve", from = "src"},
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (500+ employee graphs, deselect with '-m \"not slow\"')",
    "integration: marks integration tests that exercise multiple subsystems",
    "performance: marks performance regression tests (run with 'make benchmark')",
]

[tool.mypy]
plugins = ["pydantic.mypy"]
mypy_path = "src"
explicit_package_bases = true
warn_unused_configs = true
# Pre-existing errors from these checks — tracked in issue for strict cleanup
disable_error_code = ["arg-type", "override", "attr-defined", "assignment", "no-redef", "name-defined", "call-overload"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S108"]
"src/synthetic/**" = ["S311"]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]
